Fix the test flag to include manualmode-expension module in wildfly verification job

--- a/.github/workflows/review-release.yml
+++ b/.github/workflows/review-release.yml
@@ -126,7 +126,7 @@ jobs:
           ./mvnw clean verify -pl microprofile/health-smallrye -Dversion.io.smallrye.smallrye-health="$SNAPSHOT_VERSION"
           ./mvnw clean verify -pl testsuite/integration/microprofile -Dts.standalone.microprofile -Dtest="org.wildfly.test.integration.microprofile.health.*TestCase" -Dversion.io.smallrye.smallrye-health="$SNAPSHOT_VERSION"
           ./mvnw clean verify -pl testsuite/integration/microprofile-tck/health -Dts.standalone.microprofile -Dversion.io.smallrye.smallrye-health="$SNAPSHOT_VERSION"
-          ./mvnw clean verify -pl testsuite/integration/manualmode-expansion -Dts.manualmode -Dtest="org.wildfly.test.manual.microprofile.health.*TestCase" -Dversion.io.smallrye.smallrye-health="$SNAPSHOT_VERSION"
+          ./mvnw clean verify -pl testsuite/integration/manualmode-expansion -DallTests -Dtest="org.wildfly.test.manual.microprofile.health.*TestCase" -Dversion.io.smallrye.smallrye-health="$SNAPSHOT_VERSION"
 
 
 
