Fix xstefank's email

--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
     <developer>
       <id>xstefank</id>
       <name>Martin Stefanko</name>
-      <email>xstefank[AT]redhat[DOT]com</email>
+      <email>xstefank122[AT]gmail[DOT]com</email>
       <url>https://github.com/xstefank</url>
     </developer>
   </developers>
