--- a/.github/workflows/publish-tck.yml
+++ b/.github/workflows/publish-tck.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ 11, 17, 21 ]
+        java: [ 17, 21 ]
 
     steps:
       - uses: actions/checkout@v4
