--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,9 @@
   <url>http://smallrye.io</url>
 
   <properties>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+
     <version.eclipse.microprofile.config>3.1</version.eclipse.microprofile.config>
     <version.eclipse.microprofile.health>4.0.1</version.eclipse.microprofile.health>
     <version.eclipse.parsson>1.1.7</version.eclipse.parsson>
