--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,7 @@
   <url>http://smallrye.io</url>
 
   <properties>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
+    <maven.compiler.release>17</maven.compiler.release>
 
     <version.eclipse.microprofile.config>3.1</version.eclipse.microprofile.config>
     <version.eclipse.microprofile.health>4.0.1</version.eclipse.microprofile.health>
