--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,9 @@
   <url>http://smallrye.io</url>
 
   <properties>
+    <!-- source and target required to override values from parent -->
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
     <maven.compiler.release>17</maven.compiler.release>
 
     <version.eclipse.microprofile.config>3.1</version.eclipse.microprofile.config>
