Add JDK 23 to build GH action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,8 +36,8 @@ jobs:
           - { name: "19" }
           - { name: "20" }
           - { name: "21" }
-          - { name: "22-ea",
-              download_url: "https://download.java.net/java/GA/jdk22/830ec9fcccef480bb3e73fb7ecafe059/36/GPL/openjdk-22_linux-x64_bin.tar.gz"}
+          - { name: "22" }
+          - { name: "23" }
 
     name: Build with JDK ${{ matrix.java.name }}
 
