--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,5 +84,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           SONAR_TOKEN: ${{secrets.SONAR_TOKEN}}
-        run: mvn -B verify --file pom.xml -Pcoverage javadoc:javadoc org.sonarsource.scanner.maven:sonar-maven-plugin:sonar /
-          -Dsonar.organization=smallrye -Dsonar.projectKey=smallrye_smallrye-health -Dsonar.login=$SONAR_TOKEN -Dmaven.test.failure.ignore=true
+        run: mvn -B verify --file pom.xml -Pcoverage javadoc:javadoc org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.organization=smallrye -Dsonar.projectKey=smallrye_smallrye-health -Dsonar.login=$SONAR_TOKEN -Dmaven.test.failure.ignore=true
